--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "Auto refresh for ConquerClub",
-  "homepage_url": "http://tonymtz.com",
+  "homepage_url": "https://github.com/TonyMtz/cc-auto-refresh",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
